[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydhcp3"
version = "0.0.6"
requires-python = ">=3.8"
dependencies = [
    'pypool3>=0.0.2',
    'pyderive3>=0.0.7',
    'pystructs3>=0.0.8',
    'pyserve3>=0.0.7',
    'typing_extensions>=4.7.1',
]
authors = [
    {name = "Andrew C Scott", email = "imgurbot12@gmail.com"},
]
description = "Simple Python DHCP Library. DHCP Packet-Parsing/Client/Server"
readme = {file = "README.md", content-type = "text/markdown"}
license = { file = 'LICENSE' }
keywords = ["dhcp", "client", "server", "parser"]
classifiers = [
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.urls]
Repository = "https://github.com/imgurbot12/pydhcp"

[tool.setuptools.package-data]
"pystructs3" = ["py.typed"]
